# crypto_api

./: .gitignore  README.md  bitcoin_recent_data.json  bitcoin_ticker.json  coins.json  main.py  market_data.json  my_api_key  package-lock.json  package.json  pyproject.toml  reading_through_docs.py  remote_db_test.py  server.cjs  streamlit_app.py
crypto_api/: api_client.py  current_only_gui.py  database.py  routes.py
data/: MOCK_DATA.json  bitcoin_data.json  bitcoin_historic_data.json  coins.json  exchanges.json  market_list.json  trending_data.json
env/: .env
scratch_scripts/: data_base_scratch_1.py  enviroment_vars_scratch_1.py  reading_through_docs.py
src/: App.jsx  App.tsx  DataTable.tsx  TableComponent.jsx  TableSort.tsx  Table_w_images.tsx  styles.css
src/components/Header/: Header.tsx
src/components/SignIn/: SignInButton.jsx  SignInForm.jsx
src/components/SignUp/: SignUpButton.jsx
src/components/Table/: HomePageTable.tsx  TableSort.module.css  Table_w_images.tsx  table_data2.json
tests/: test_database_1.py
