[tool.poetry]
name = "crypto-api"
version = "0.1.0"
description = ""
authors = ["unsupervised-machine <taran.s.lau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pymongo = "^4.7.3"
fastapi = "0.109.1"
uvicorn = "^0.30.1"
nicegui = "1.4.27"
bcrypt = "4.0.1"
streamlit = "^1.36.0"
pydantic = "^2.8.2"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
